# compulsion-temporal-dynamics

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
data/: sample_small.csv
src/ctd/: __init__.py  __main__.py  cli.py  legacy.py  logging.py  pipeline.py  preprocess.py  report.py
src/ctd/analysis/: bootstrap.py  descriptives.py  lag.py  models.py  power.py  sensitivity.py
src/ctd/data/: generate.py  io.py
src/ctd/viz/: dag.py  plots.py
tests/: test_analysis.py  test_bootstrap.py  test_dag.py  test_data.py  test_legacy.py  test_preprocess.py
