[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compulsion-temporal-dynamics"
version = "0.1.0"
description = "Reanalysis of a small synthetic EMA dataset on stress, outside-time, and compulsions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kursadacar" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
ctd = "ctd.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
