[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compulsion-temporal-dynamics"
version = "0.1.0"
description = "Reanalysis of a small synthetic EMA dataset on stress, outside-time, and compulsions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kursadacar" }]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "typer>=0.12",
    "rich>=13",
]

[project.scripts]
ctd = "ctd.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "pre-commit>=3",
]
dashboard = [
    "streamlit>=1.30",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
    "E501",  # long lines, formatted by hand for tables/comments
    "B008",  # typer.Option() in defaults is the documented pattern
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    # matplotlib uses an old pyparsing API; not our problem and not our fix.
    "ignore::DeprecationWarning:pyparsing.*",
    "ignore:.*pyparsing.*:DeprecationWarning",
    "ignore:.*oneOf.*deprecated.*",
    "ignore:.*parseString.*deprecated.*",
    "ignore:.*resetCache.*deprecated.*",
    "ignore:.*enablePackrat.*deprecated.*",
]
